--- a/chris-ant.cabal
+++ b/chris-ant.cabal
@@ -34,7 +34,10 @@ library
   hs-source-dirs:    src
   exposed-modules:   Lib
   build-depends:     base >= 4.8 && < 5
-                   , mtl >= 2.2.2
+                   , mtl >= 2.2.2 && < 3
+                   , vector >= 0.13 && < 1
+                   , lens >= 5.1.1 && < 6
+                   , relude >= 1.1.0.0 && < 2
   ghc-options:         -Wall
                        -Werror
                        -Wcompat
