--- a/chris-ant.cabal
+++ b/chris-ant.cabal
@@ -24,7 +24,6 @@ extra-source-files:
     README.md
     CHANGELOG.md
 
-
 extra-source-files:
   README.md
   CHANGELOG.md
@@ -33,11 +32,14 @@ library
   default-language:  Haskell2010
   hs-source-dirs:    src
   exposed-modules:   Lib
+                   , Example
+                   , ParseInput
   build-depends:     base >= 4.8 && < 5
                    , mtl >= 2.2.2 && < 3
                    , vector >= 0.13 && < 1
                    , lens >= 5.1.1 && < 6
                    , relude >= 1.1.0.0 && < 2
+                   , megaparsec >= 9.1 && < 9.2
   ghc-options:         -Wall
                        -Werror
                        -Wcompat
@@ -56,6 +58,10 @@ executable chris-ant-exe
   main-is:           Main.hs
   build-depends:     base >= 4.8 && < 5
                    , chris-ant
+                   , megaparsec >= 9.0 && < 9.2
+                   , vector >= 0.13 && < 0.14
+                   , relude >= 1.1 && < 1.2
+                   , lens >= 5.1.1 && < 5.2
   ghc-options:       -Wall
                      -Werror
                      -Wcompat
@@ -81,6 +87,9 @@ test-suite chris-ant-test
                    , tasty-hunit >= 0.9
                    , tasty-smallcheck >= 0.8
                    , chris-ant
+                   , megaparsec >= 9.1 && < 9.2
+                   , vector >= 0.13 && < 0.14
+                   , relude >= 1.1 && < 1.2
   ghc-options:       -Wall
                      -Werror
                      -Wcompat
