--- a/chris-ant.cabal
+++ b/chris-ant.cabal
@@ -31,7 +31,7 @@ extra-source-files:
 library
   default-language:  Haskell2010
   hs-source-dirs:    src
-  exposed-modules:   Lib
+  exposed-modules:   Naive
                    , Example
                    , ParseInput
   build-depends:     base >= 4.8 && < 5
@@ -137,6 +137,7 @@ benchmark chris-ant-benchmark
   build-depends:     base >= 4.8 && < 5
                    , criterion >= 1.1
                    , chris-ant
+                   , vector >= 0.13 && < 0.14
   ghc-options:       -Wall
                      -Werror
                      -Wcompat
